--- a/CMP1903M A01 2223/CMP1903M A01 2223/CMP1903M A01 2223.csproj
+++ b/CMP1903M A01 2223/CMP1903M A01 2223/CMP1903M A01 2223.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
+    <Compile Include="Hand.cs" />
     <Compile Include="Testing.cs" />
     <Compile Include="Pack.cs" />
     <Compile Include="Program.cs" />
